# forth_component

components/forth/: .gitignore  CMakeLists.txt  consio.c  extend.c  floatops.c  forth.c  interface.c  interface.h  prims.h  rodict.c  sforth.c  sforth.h  tdate.c  vars.h
components/forth/regen/: .gitignore  app.fth  forth  forth.dic  makebi  makeccalls  regen.sh  server.fth  tccalls.fth
components/spiffs/: CMakeLists.txt  list.c  list.h  spiffs_vfs.c
